@@ -1,3 +1,8 @@
+2007-05-31  Daniel Macks  <dmacks@netspace.org>
+
+	* Engine.pm, PkgVersion.pm, Validation.pm: Backport conditional
+	ConfFiles and Shlibs to branch_0.27 (target release 0.27.2)
+
 2007-04-27  Dave Morrison  <drm@finkproject.org>
 
 	* VirtPackage.pm: (backport from HEAD) Parse a greater variety of 
